Fixed some issues found by FindBugs
git-svn-id: https://svn.apache.org/repos/asf/webservices/rampart/trunk/java@637762 13f79535-47bb-0310-9956-ffa450edef68